# agentic-ai-workspace

./: main.py  pyproject.toml
crewai/debate_agent/: README.md  pyproject.toml
crewai/debate_agent/output/: debate_verdict.md  oppose.md  propose.md
crewai/debate_agent/src/debate_agent/: crew.py  main.py
crewai/debate_agent/src/debate_agent/config/: agents.yaml  tasks.yaml
crewai/startup_researcher/: README.md  pyproject.toml
crewai/startup_researcher/src/startup_researcher/: crew.py  main.py
