[project]
name = "debate_agent"
version = "0.1.0"
description = "debate-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.8.1",
    "python-dotenv>=1.1.1",
]

[project.scripts]
debate_agent = "debate_agent.main:run"
run_crew = "debate_agent.main:run"
train = "debate_agent.main:train"
replay = "debate_agent.main:replay"
test = "debate_agent.main:test"
run_with_trigger = "debate_agent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
