[project]
name = "startup_researcher"
version = "0.1.0"
description = "startup_researcher using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.8.1"
]

[project.scripts]
startup_researcher = "startup_researcher.main:run"
run_crew = "startup_researcher.main:run"
train = "startup_researcher.main:train"
replay = "startup_researcher.main:replay"
test = "startup_researcher.main:test"
run_with_trigger = "startup_researcher.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
